config intervals service